--- a/src/index.css
+++ b/src/index.css
@@ -45,8 +45,8 @@
 }
 
 ::-webkit-scrollbar {
-    width:6px;
-    height:6px;
+    width:7px;
+    height:7px;
 } 
 
 ::-webkit-scrollbar-track {
@@ -55,6 +55,6 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #dbe3ff;
+    background: #6c86d0;
     border-radius: 5px;
 }
